Changes in code

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </properties>
 
     <dependencies>
+
         <!-- OpenCV -->
         <dependency>
             <groupId>org.openpnp</groupId>
@@ -26,14 +27,14 @@
             <version>3.2.0-1</version>
         </dependency>
 
-        <!-- configuration management -->
+        <!-- Configuration Management -->
         <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>1.2.1</version>
         </dependency>
 
-        <!-- logging -->
+        <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -54,6 +55,8 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.8.2</version>
         </dependency>
+
+        <!-- TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
